--- a/MyggumiAdmin/src/main/webapp/resources/assets/css/mycss.css
+++ b/MyggumiAdmin/src/main/webapp/resources/assets/css/mycss.css
@@ -1,10 +1,5 @@
-.body-min-height{
-	min-height: 700px;
-}
-
-.body-font-color{
-	color: #f2f2f2;
-}
+.body-min-height{ min-height: 700px; }
+.body-font-color{ color: #f2f2f2; }
 
 .tr-title{
 	/* padding: 25px 0 5px 0; */
@@ -14,7 +9,6 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     font-weight: bold;
-    
 }
 
 tr{
@@ -27,19 +21,167 @@ tr{
 	/* border-left: 3px solid #952f12; 빨강 */
 	/* border-left: 3px solid #1c616c; 파랑 */
 	/* border-left: 3px solid #9d7919; 노랑 */
-	
-	
-	
 }
 
 .btn-color{
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
-.text-align-center{
-	text-align: center;
+.text-align-center{ text-align: center; }
+.text-align-left{ text-align: left; }
+.my-tbl{ text-align: center; }
+
+.my-width-30{ width: 30% }
+.my-width-50 { 	width: 45% }
+.my-width-45 {	width: 45% }
+.my-width-66 { 	width: 66% }
+.my-width-70 { 	width: 70% }
+.my-width-85 { 	width: 85% }
+.my-width-100 { width: 100% }
+
+.my-padding-10{ padding: 10px 10px 10px 10px; }
+
+.my-margin-left-10{ margin-left: 10px; }
+
+ 
+ 
+
+/* Reset Select */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: #454545;
+  background-image: none;
+}
+/* Custom Select */
+.select {
+  position: relative;
+  display: block;
+  width: 20em;
+  height: 3em;
+  line-height: 3;
+  background: #454545;
+  overflow: hidden;
+  border-radius: .25em;
+}
+select {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0 0 0 .5em;
+  color: #fff;
+  cursor: pointer;
+}
+select::-ms-expand {
+  display: none;
+}
+/* Arrow */
+.select::after {
+  content: '\25BC';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0 1em;
+  background: #454545;
+  pointer-events: none;
+}
+/* Transition */
+.select:hover::after {
+  color: #f39c12;
+}
+.select::after {
+  -webkit-transition: .25s all ease;
+  -o-transition: .25s all ease;
+  transition: .25s all ease;
 }
 
-.my-tbl{
-	text-align: center;
+
+
+ 
+.btn-switch {
+  font-size: 1em;
+	position: relative;
+	display: inline-block;		
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.btn-switch__radio {
+	display: none;
+}
+.btn-switch__label {
+	display: inline-block;	
+	padding: .75em .5em .75em .75em;
+	vertical-align: top;
+	font-size: 1em;
+	font-weight: 700;
+	line-height: 1.0;
+	color: #666;
+  cursor: pointer;
+	transition: color .2s ease-in-out;
+}
+.btn-switch__label + .btn-switch__label {
+  padding-right: .75em;
+	padding-left: 0;
+}
+.btn-switch__txt {
+	position: relative;
+	z-index: 2;
+    display: inline-block;
+    min-width: 1.5em;
+	opacity: 1;
+	pointer-events: none;
+	transition: opacity .2s ease-in-out;
+}
+.btn-switch__radio_no:checked ~ .btn-switch__label_yes .btn-switch__txt,
+.btn-switch__radio_yes:checked ~ .btn-switch__label_no .btn-switch__txt {
+	opacity: 0;
+}
+.btn-switch__label:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: #f0f0f0;
+	border-radius: 1.5em;
+	box-shadow: inset 0 .0715em .3572em rgba(43,43,43,.05);
+	transition: background .2s ease-in-out;
+}
+.btn-switch__radio_yes:checked ~ .btn-switch__label:before {
+	background: #6ad500;
+}
+.btn-switch__label_no:after {
+	content: "";
+	position: absolute;
+	z-index: 2;
+	top: .5em;
+	bottom: .5em;
+	left: .5em;
+	width: 2em;
+	background: #fff;
+	border-radius: 1em;	
+	pointer-events: none;
+	box-shadow: 0 .1429em .2143em rgba(43,43,43,.2), 0 .3572em .3572em rgba(43,43,43,.1);
+	transition: left .2s ease-in-out, background .2s ease-in-out;
+}
+.btn-switch__radio_yes:checked ~ .btn-switch__label_no:after {
+	left: calc(100% - 2.5em);
+	background: #fff;
+}
+.btn-switch__radio_no:checked ~ .btn-switch__label_yes:before,
+.btn-switch__radio_yes:checked ~ .btn-switch__label_no:before {
+	z-index: 1;
+}
+.btn-switch__radio_yes:checked ~ .btn-switch__label_yes {
+	color: #fff;
 }
