회원리스트목록까지 화면나옴.

--- a/MyggumiAdmin/src/main/webapp/resources/assets/css/mycss.css
+++ b/MyggumiAdmin/src/main/webapp/resources/assets/css/mycss.css
@@ -36,7 +36,9 @@ tr{
 .my-width-45 {	width: 45% }
 .my-width-66 { 	width: 66% }
 .my-width-70 { 	width: 70% }
+.my-width-75 { 	width: 75% }
 .my-width-85 { 	width: 85% }
+.my-width-90 { 	width: 90% }
 .my-width-100 { width: 100% }
 
 .my-padding-10{ padding: 10px 10px 10px 10px; }
